# byyl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxygen.config  LICENSE  README.md  llvm-u2Q3jK  llvm-vgEKiF  main.cpp
backend/: CodeGenerator.cpp  CodeGenerator.h  CodeGeneratorAsm.cpp  CodeGeneratorAsm.h
backend/arm32/: CodeGeneratorArm32.cpp  CodeGeneratorArm32.h  ILocArm32.cpp  ILocArm32.h  InstSelectorArm32.cpp  InstSelectorArm32.h  PlatformArm32.cpp  PlatformArm32.h  SimpleRegisterAllocator.h
doc/: Antlr4.md
doc/figures/: Value-User-Use.drawio
frontend/: AST.cpp  AST.h  AttrType.h  FrontEndExecutor.h  Graph.cpp  Graph.h
frontend/antlr4/: Antlr4CSTVisitor.cpp  Antlr4CSTVisitor.h  MiniC.g4
frontend/antlr4/.antlr/: MiniC.interp  MiniC.tokens  MiniCBaseListener.java  MiniCLexer.java  MiniCListener.java  MiniCParser.java
frontend/antlr4/autogenerated/: MiniC.interp  MiniCBaseVisitor.h  MiniCLexer.cpp  MiniCLexer.h  MiniCLexer.interp  MiniCLexer.tokens  MiniCParser.cpp  MiniCParser.h  MiniCVisitor.h
frontend/flexbison/: BisonParser.h  FlexBisonExecutor.cpp  MiniC.l  MiniC.y
frontend/flexbison/autogenerated/: MiniCBison.cpp  MiniCBison.h  MiniCFlex.cpp  MiniCFlex.h
frontend/recursivedescent/: RecursiveDescentExecutor.cpp  RecursiveDescentExecutor.h  RecursiveDescentFlex.cpp  RecursiveDescentFlex.h  RecursiveDescentParser.cpp  RecursiveDescentParser.h
ir/: Constant.h  FormalParam.h  Function.cpp  Function.h  GlobalValue.h  IRCode.cpp  IRCode.h  IRConstant.h  Instruction.cpp  Instruction.h  Use.h  User.h  Value.h
ir/Generator/: IRGenerator.cpp  IRGenerator.h
ir/Instructions/: ArgInstruction.cpp  BinaryInstruction.cpp  BinaryInstruction.h  EntryInstruction.cpp  ExitInstruction.cpp  FuncCallInstruction.cpp  FuncCallInstruction.h  GotoInstruction.cpp  LabelInstruction.h  MoveInstruction.cpp
ir/Types/: IntegerType.cpp  LabelType.h  PointerType.h  VoidType.h
ir/Values/: ConstInt.h  FormalParam.h  LocalVariable.h  RegVariable.h
symboltable/: Module.cpp  Module.h  ScopeStack.cpp  ScopeStack.h
tests/: std.c  std.h  test1-1.c  test1-1.ir  test2-1  test2-1.c  test2-1.ir  test2-2.c  test2-2.ir  test2-2S.ir  test3-1  test3-1-1  test3-1-1.s  test3-1.c  test3-1.s  test3-1IR.ir  test3-2  test3-2-1  test3-2-1.s  test3-2.c  test3-2.ir  test3-2.s  test3-2IR.ir  test3-3  test3-3-1  test3-3-1.s  test3-3.c  test3-3.ir  test3-3.s  test3-3IR.ir
tools/: arm32-build-run.sh  ubuntu.sh  wsl.md
utils/: Common.cpp  Common.h  Set.h  getopt-port.cpp  getopt-port.h
